--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "colors": "^1.4.0",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^4.6.0",
+    "connect-mongodb-session": "^3.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
@@ -26,9 +27,11 @@
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.2",
     "firebase-admin": "^10.0.2",
+    "form-data": "^4.0.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mailgun-js": "^0.22.0",
+    "mailgun.js": "^5.2.2",
     "method-override": "^3.0.0",
     "moment": "^2.29.3",
     "mongoose": "^6.3.0",
@@ -42,5 +45,8 @@
   "devDependencies": {
     "cross-env": "^7.0.3",
     "nodemon": "^2.0.15"
+  },
+  "engines": {
+    "node": "16.13.1"
   }
 }
