--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     "mongoose": "^6.3.0",
     "morgan": "^1.10.0",
     "passport": "^0.5.2",
+    "passport-google-oauth2": "^0.2.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-google-oidc": "^0.1.0",
     "passport-local": "^1.0.0",
     "request": "^2.88.2",
     "socket.io": "^4.4.1",
