--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Bernard Iorver (Benion)",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "connect-flash": "^0.1.1",
